auto-test/tests/chapter_18/invalid_parse/dot_invalid_member.c
struct s {
    int y;
};

struct s x;


int main(void) {
    return x.(y);
}
